@@ -354,6 +354,17 @@ When enabled Wagtail shows where a particular image, document or snippet is bein
 
     The usage count only applies to direct (database) references. Using documents, images and snippets within StreamFields or rich text fields will not be taken into account.
 
+Date and DateTime inputs
+------------------------
+
+.. code-block:: python
+
+    WAGTAIL_DATE_FORMAT = '%d.%m.%Y.'
+    WAGTAIL_DATETIME_FORMAT = '%d.%m.%Y. %H:%M'
+
+Allows using of custom date and datetime formats in wagtail inputs.
+
+
 URL Patterns
 ~~~~~~~~~~~~
 
