@@ -157,7 +157,16 @@ DateBlock
 
 ``wagtail.wagtailcore.blocks.DateBlock``
 
-A date picker. The keyword arguments ``required`` and ``help_text`` are accepted.
+A date picker. The keyword arguments ``required``, ``help_text``, ``format``, ``input_formats`` and ``js_format`` are accepted.
+
+``format`` (default: None)
+  Date format. If not specifed Wagtail will use ``WAGTAIL_DATE_FORMAT`` setting with failback to '%Y-%m-%d'.
+
+``js_format`` (default: None)
+  Javascript datepicker format. Leave empty for automatic conversion.
+
+``input_formats`` (default: None)
+  Input formats to be passed to django field.
 
 TimeBlock
 ~~~~~~~~~
@@ -171,7 +180,16 @@ DateTimeBlock
 
 ``wagtail.wagtailcore.blocks.DateTimeBlock``
 
-A combined date / time picker. The keyword arguments ``required`` and ``help_text`` are accepted.
+A combined date / time picker. The keyword arguments ``required``, ``help_text``, ``format``, ``input_formats`` and ``js_format`` are accepted.
+
+``format`` (default: None)
+  Date format. If not specifed Wagtail will use ``WAGTAIL_DATETIME_FORMAT`` setting with failback to '%Y-%m-%d %H:%M'.
+
+``js_format`` (default: None)
+  Javascript datepicker format. Leave empty for automatic conversion.
+
+``input_formats`` (default: None)
+  Input formats to be passed to django field.
 
 RichTextBlock
 ~~~~~~~~~~~~~
