@@ -1,6 +1,7 @@
 from __future__ import absolute_import, unicode_literals
 
 from django.test import TestCase
+from django.test.utils import override_settings
 
 from wagtail.tests.testapp.models import EventPage, SimplePage
 from wagtail.wagtailadmin import widgets
@@ -72,4 +73,69 @@ class TestAdminPageChooserWidget(TestCase):
         js_init = widget.render_js_init('test-id', 'test', self.child_page)
         self.assertEqual(
             js_init, "createPageChooser(\"test-id\", [\"wagtailcore.page\"], %d, true);" % self.root_page.id
+        )
+
+
+class TestAdminDateInput(TestCase):
+
+    def test_render_js_init(self):
+        widget = widgets.AdminDateInput()
+
+        js_init = widget.render_js_init('test-id', 'test', None)
+        self.assertEqual(js_init, 'initDateChooser("test-id", {"dayOfWeekStart": 0});')
+
+    def test_render_js_init_with_format_and_js_format(self):
+        widget = widgets.AdminDateInput(format='%d.%m.%Y.', js_format='d.m.Y.')
+
+        js_init = widget.render_js_init('test-id', 'test', None)
+        self.assertEqual(
+            js_init,
+            'initDateChooser("test-id", {"dayOfWeekStart": 0, "format": "d.m.Y."});'
+        )
+
+    def test_render_js_init_with_format(self):
+        widget = widgets.AdminDateInput(format='%d.%m.%Y.')
+
+        js_init = widget.render_js_init('test-id', 'test', None)
+        self.assertEqual(
+            js_init,
+            'initDateChooser("test-id", {"dayOfWeekStart": 0, "format": "d.m.Y."});'
+        )
+
+    @override_settings(WAGTAIL_DATE_FORMAT='%d.%m.%Y.')
+    def test_render_js_init_with_format_from_settings(self):
+        widget = widgets.AdminDateInput()
+
+        js_init = widget.render_js_init('test-id', 'test', None)
+        self.assertEqual(
+            js_init,
+            'initDateChooser("test-id", {"dayOfWeekStart": 0, "format": "d.m.Y."});'
+        )
+
+
+class TestAdminDateTimeInput(TestCase):
+
+    def test_render_js_init(self):
+        widget = widgets.AdminDateTimeInput()
+
+        js_init = widget.render_js_init('test-id', 'test', None)
+        self.assertEqual(js_init, 'initDateTimeChooser("test-id", {"dayOfWeekStart": 0});')
+
+    def test_render_js_init_with_format(self):
+        widget = widgets.AdminDateTimeInput(format='%d.%m.%Y. %H:%M')
+
+        js_init = widget.render_js_init('test-id', 'test', None)
+        self.assertEqual(
+            js_init,
+            'initDateTimeChooser("test-id", {"dayOfWeekStart": 0, "format": "d.m.Y. H:i"});'
+        )
+
+    @override_settings(WAGTAIL_DATETIME_FORMAT='%d.%m.%Y. %H:%M')
+    def test_render_js_init_with_format_from_settings(self):
+        widget = widgets.AdminDateTimeInput()
+
+        js_init = widget.render_js_init('test-id', 'test', None)
+        self.assertEqual(
+            js_init,
+            'initDateTimeChooser("test-id", {"dayOfWeekStart": 0, "format": "d.m.Y. H:i"});'
         )
